proj1/tests/other-tests/MINZ_tests/correct/dictionary.py
dict = {'value' : 1, 'abc' : "aba", "ab" : "ababa", "abc" : 2}
print(dict["ab"]) #Expect 'ababa'
