proj1/tests/other-tests/MINZ_tests/error/dict.py
dict1 = { : 1}
dict2 = {2 : 'abc', }
dict3 = {2 :}
dict4 = {
